--- a/easteregg.html
+++ b/easteregg.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initia-scale=1.0">
     <link rel="stylesheet" href="css/easteregg.css">
     <link rel="icon" href="img/icon2.png">
-      <title>Ark Enzyklopädie</title>
+    <title>Ark Enzyklopädie</title>
 </head>
 
 <body>
@@ -22,13 +22,15 @@
         </select>
         <input type="text" id="email" placeholder="Your Email here" required />
         <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Your comments here"></textarea>
-        <input type="submit" id="submit" value="Senden" />
+        <a href="https://www.youtube.com/watch?v=wFhdShArqJo" id="prank">
+            Senden
+        </a>
     </form>
 </body>
 <footer>
-    <div id="loel">
+    <div id=" loel">
         <a href="spielprinzip.html">
-            <button id="bottom">Back</button>
+            <p id="bottom">Back</p>
         </a>
     </div>
 </footer>
