--- a/index.html
+++ b/index.html
@@ -53,28 +53,34 @@
         <div id="return">
           <p id="back">Back</p>
         </div>
-        <footer>
-          <div id="bottom">
-            <p id="impresum">Erstellt von Joel</p>
-          </div>
-        </footer>
       </nav>
       <section>
         <h1>Home</h1>
       </section>
-        <div>
-          <img src="" id="logo">
-        </div>
+      <div>
+        <img src="img/logo.bmp" id="logo">
+      </div>
     </div>
   </header>
   <section>
-  <h5>
-    Willkommen bei dieser Website über Ark. Auf dieser Webstite könnt ihr heraus finden wie das Spiel im groben
-    funktionert und wo ihr es euch holen könnt. Ich hoffe ich habe euch mit der Website geholfen und das ihr ein
-    tolles neues Spiel gefunden habt.
-  </h5>
-
+    <h5>
+      Willkommen bei dieser Website über Ark. Auf dieser Webstite könnt ihr heraus finden wie das Spiel im groben
+      funktionert und wo ihr es euch holen könnt. Ich hoffe ich habe euch mit der Website geholfen und das ihr ein
+      tolles neues Spiel gefunden habt.
+    </h5>
   </section>
+  <footer id="ersteller">
+    <div class="grid4">
+      <article>
+        Joel Däppen
+      </article>
+      <article>
+        <a href="impresum.html">
+          Impresum
+        </a>
+      </article>
+    </div>
+  </footer>
 </body>
 
 </html>
