--- a/kaufen.html
+++ b/kaufen.html
@@ -51,11 +51,6 @@
         <div id="return">
           <p id="back">Back</p>
         </div>
-        <footer>
-          <div id="bottom">
-            <p id="impresum">Erstellt von Joel</p>
-          </div>
-        </footer>
       </nav>
       </a>
       <h1>Kaufen</h1>
@@ -67,8 +62,8 @@
   <h3>
     Hier ein Link falls du jetzt auch Lust hast Ark zu spielen:
   </h3>
-  <div id="kaufen">
-    <a href="https://www.youtube.com">Ark bei Steam</a>
+  <div>
+    <a href="https://store.steampowered.com/" id="kaufen">Ark bei Steam</a>
   </div>
   <h5>
     Wenn nicht dann gibt doch eine Rückmeldung warum nicht und auch eine zu dieser Website.
@@ -79,6 +74,18 @@
       <input type="submit" id="submit" value="Senden" />
     </form>
   </h5>
+    <footer id="ersteller">
+    <div class="grid4">
+      <article>
+        Joel Däppen
+      </article>
+      <article>
+        <a href="impresum.html">
+          Impresum
+        </a>
+      </article>
+    </div>
+  </footer>
 </body>
 
 </html>
