--- a/spielprinzip.html
+++ b/spielprinzip.html
@@ -14,13 +14,15 @@
 <body>
   <header>
     <div class="grid">
-      <div id="menu">
-        <div id="striche">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
+      <section>
+        <div id="menu">
+          <div id="striche">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
         </div>
-      </div>
+      </section>
       <nav>
         <section class="container">
           <article class="items">
@@ -51,18 +53,14 @@
         <div id="return">
           <p id="back">Back</p>
         </div>
-        <footer>
-          <div id="bottom">
-            <p id="impresum">Erstellt von Joel</p>
-          </div>
-        </footer>
       </nav>
-      <h1>Prinzip</h1>
+      <section>
+        <h1>Prinzip</h1>
+      </section>
       <div>
         <img src="img/logo.bmp" id="logo">
       </div>
     </div>
-
   </header>
   <section>
     <article>
@@ -93,9 +91,9 @@
     </article>
   </section>
   <article id="fett">
-    Hier eine Anleitung wie mann schnell gute Ausrüstung bekommt:
+    Hier eine Anleitung wie man schnell gute Ausrüstung bekommt:
   </article>
-  <section class="container2">
+  <div class="grid3">
     <article>
       <ol id="anleitung">
         <li>
@@ -123,17 +121,35 @@
           Metall ausrüstung herrstellen
         </li>
         <li>
-
+          Ein T-Rex zähmen und eine passende Base bauen
+        </li>
+        <li>
+          Vor seinen Freunden angeben wie gut man in Ark ist
         </li>
         <li>
           Sich freuen das man schon so viel geschafft hat
         </li>
       </ol>
     </article>
+
     <article>
-      <img src="" alt="">
+      <img src="img/Ankylosaurus.png" alt="Ankylosauruss" id="bild">
     </article>
+    F
+  </div>
   </section>
+  <footer id="ersteller">
+    <div class="grid4">
+      <article>
+        Joel Däppen
+      </article>
+      <article>
+        <a href="impresum.html">
+          Impresum
+        </a>
+      </article>
+    </div>
+  </footer>
 </body>
 
 </html>
