--- a/easteregg.html
+++ b/easteregg.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initia-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/easteregg.css">
     <link rel="icon" href="img/icon2.png">
     <title>Ark Enzyklopädie</title>
