--- a/impresum.html
+++ b/impresum.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initia-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
