--- a/kaufen.html
+++ b/kaufen.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width,initia-scale=1.0">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
@@ -74,13 +75,13 @@
       <input type="submit" id="submit" value="Senden" />
     </form>
   </h5>
-    <footer id="ersteller">
+  <footer id="ersteller">
     <div class="grid4">
       <article>
         Joel Däppen
       </article>
       <article>
-        <a href="impresum.html">
+        <a href="impresum.html" id="impresum">
           Impresum
         </a>
       </article>
