--- a/spielprinzip.html
+++ b/spielprinzip.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+
 
 <head>
   <meta name="viewport" content="width=device-width,initia-scale=1.0">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
@@ -135,7 +136,6 @@
     <article>
       <img src="img/Ankylosaurus.png" alt="Ankylosauruss" id="bild">
     </article>
-    F
   </div>
   </section>
   <footer id="ersteller">
@@ -144,8 +144,8 @@
         Joel Däppen
       </article>
       <article>
-        <a href="impresum.html">
-          Impresum
+        <a href="impresum.html" id="impresum">
+          Impressum
         </a>
       </article>
     </div>
