--- a/impresum.html
+++ b/impresum.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="Description" content="Ark Fanpage">
     <meta name="viewport" content="width=device-width,initia-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
     <script src="js/skript.js" async></script>
     <link rel="icon" href="img/icon2.png">
     <title>Ark Enzyklopädie</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
                     </article>
                 </section>
                 <section id="logi">
-                    <img src="img/logo2.bmp" class="menu">
+                    <img src="img/logo2.png" class="menu" alt="Frau auf Dino">
                 </section>
                 <div id="return">
                     <p id="back">Back</p>
@@ -64,7 +65,7 @@
                 <h1>Quellen</h1>
             </section>
             <div>
-                <img src="img/logo.bmp" id="logo">
+                <img src="img/logo.png" id="logo" alt="Ark Logo">
             </div>
         </div>
     </header>
@@ -72,14 +73,14 @@
         <p>Quellenangaben:</p>
         <ul id="quellen">
             <li>
-                <h3>
+                <p>
                     Bilder: https://ark.gamepedia.coms
-                </h3>
+                </p>
             </li>
             <li>
-                <h3>
+                <p>
                     Infos: https://ark.gamepedia.com, https://www.dododex.com
-                </h3>
+                </p>
             </li>
         </ul>
     </section>
