--- a/kaufen.html
+++ b/kaufen.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta name="Description" content="Ark Fanpage">
   <meta name="viewport" content="width=device-width,initia-scale=1.0">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
   <script src="js/skript.js" async></script>
   <link rel="icon" href="img/icon2.png">
   <title>Ark Enzyklopädie</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
           </article>
         </section>
         <section id="logi">
-          <img src="img/logo2.bmp" class="menu">
+          <img src="img/logo2.png" class="menu" alt="Frau auf Dino">
         </section>
         <div id="return">
           <p id="back">Back</p>
@@ -56,25 +57,27 @@
       </a>
       <h1>Kaufen</h1>
       <div>
-        <img src="img/logo.bmp" id="logo">
+        <img src="img/logo.png" id="logo" alt="Ark Logo">
       </div>
     </div>
   </header>
-  <h3>
+  <h2>
     Hier ein Link falls du jetzt auch Lust hast Ark zu spielen:
-  </h3>
+  </h2>
   <div>
     <a href="https://store.steampowered.com/" id="kaufen">Ark bei Steam</a>
   </div>
-  <h5>
+  <h3>
     Wenn nicht dann gibt doch eine Rückmeldung warum nicht und auch eine zu dieser Website.
     <br>
     <form action="#" method="POST">
-      <textarea name="rueckmeldung" id="feedback" cols="30" rows="7" placeholder="Your feedback here"></textarea>
-      <br>
-      <input type="submit" id="submit" value="Senden" />
+      <label for="">
+        <textarea name="rueckmeldung" id="feedback" cols="30" rows="7" placeholder="Your feedback here"></textarea>
+        <br>
+        <input type="submit" id="submit" value="Senden" />
+      </label>
     </form>
-  </h5>
+  </h3>
   <footer id="ersteller">
     <div class="grid4">
       <article>
