--- a/spielprinzip.html
+++ b/spielprinzip.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
+<html lang="en">
 
 <head>
+  <meta name="Description" content="Ark Fanpage">
   <meta name="viewport" content="width=device-width,initia-scale=1.0">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
   <script src="js/skript.js" async></script>
   <link rel="icon" href="img/icon2.png">
   <title>Ark Enzyklopädie</title>
-</head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 
 <body>
   <header>
@@ -49,7 +49,7 @@
           </article>
         </section>
         <section id="logi">
-          <img src="img/logo2.bmp" class="menu">
+          <img src="img/logo2.png" class="menu" alt="Frau auf Dino">
         </section>
         <div id="return">
           <p id="back">Back</p>
@@ -59,13 +59,13 @@
         <h1>Prinzip</h1>
       </section>
       <div>
-        <img src="img/logo.bmp" id="logo">
+        <img src="img/logo.png" id="logo" alt="Ark Logo">
       </div>
     </div>
   </header>
   <section>
     <article>
-      <h5>
+      <h2>
         Das Spiel wird wahlweise aus einer Third-Person-Perspektive oder aus der Egoperspektive gespielt. Die
         Fortbewegung erfolgt zu Fuß oder reitend bzw. fliegend oder schwimmend auf einem Tier. Ihr könnt Nahkampfwaffen
         sowie <a id="easteregg" href="easteregg.html">P</a>feil und Bogen verwenden, um euch gegen aggressive Kreaturen
@@ -73,11 +73,11 @@
         Tieres gewährt. Zudem ist es euch, mit Hilfe von Gegenständen, welche aus der Umgebung eingesammelt werden
         können, euer Arsenal an Waffen und auch anderen Gegenstände zu erweitern. Ihr könnt zudem über ein großes
         Bausystem eigene Strukturen errichten und diese auch zur Verteidigung nutzen.
-      </h5>
+      </h2>
     </article>
     <article>
       <div id="leben">
-        <h4>Um zu Überleben braucht man Vier Dinge:</h4>
+        <h3 id="dinge">Um zu Überleben braucht man Vier Dinge:</h3>
       </div>
       <div id="grid2">
         <ul id="tipp">
@@ -87,7 +87,7 @@
           <li>Resscourcen</li>
           <li>und viel Geduld</li>
         </ul>
-        <img src="img/d697gm1g.bmp" alt="Basis" id="basis">
+        <img src="img/d697gm1g.png" alt="Basis" id="basis">
       </div>
     </article>
   </section>
@@ -104,7 +104,7 @@
           Eine Basis in der nähe von Wasser bauen
         </li>
         <li>
-          So schnell wie möglich ein Triceratops zähen
+          So schnell wie möglich ein Triceratops zähmen
         </li>
         <li>
           Viel Holz und Stroh farmen mit dem Triceratops
@@ -119,7 +119,7 @@
           Extrem viel Eisen farmen
         </li>
         <li>
-          Metall ausrüstung herrstellen
+          Metall ausrüstung herstellen
         </li>
         <li>
           Ein T-Rex zähmen und eine passende Base bauen
