--- a/easteregg.html
+++ b/easteregg.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="Description" content="Ark Fanpage">
     <meta name="viewport" content="width=device-width,initia-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/easteregg.css">
     <link rel="icon" href="img/icon2.png">
     <title>Ark Enzyklopädie</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 
 <body>
