--- a/kaufen.html
+++ b/kaufen.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="img/icon2.png">
   <title>Ark Enzyklopädie</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
