--- a/spielprinzip.html
+++ b/spielprinzip.html
@@ -10,7 +10,9 @@
   <link rel="icon" href="img/icon2.png">
   <title>Ark Enzyklopädie</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+</head>
 
 <body>
   <header>
@@ -67,8 +69,10 @@
     <article>
       <h2>
         Das Spiel wird wahlweise aus einer Third-Person-Perspektive oder aus der Egoperspektive gespielt. Die
-        Fortbewegung erfolgt zu Fuß oder reitend bzw. fliegend oder schwimmend auf einem Tier. Ihr könnt Nahkampfwaffen
-        sowie <a id="easteregg" href="easteregg.html">P</a>feil und Bogen verwenden, um euch gegen aggressive Kreaturen
+        Fortbewegung erfolgt zu Fuß oder reitend bzw. fliegend oder schwimmend auf einem Tier. Ihr könnt
+        Nahkampfwaffen
+        sowie <a id="easteregg" href="easteregg.html">P</a>feil und Bogen verwenden, um euch gegen aggressive
+        Kreaturen
         zu verteidigen. Viele der Kreaturen können gezähmt werden, was euch Zugriff auf die Fähigkeiten des jeweiligen
         Tieres gewährt. Zudem ist es euch, mit Hilfe von Gegenständen, welche aus der Umgebung eingesammelt werden
         können, euer Arsenal an Waffen und auch anderen Gegenstände zu erweitern. Ihr könnt zudem über ein großes
