--- a/spielprinzip.html
+++ b/spielprinzip.html
@@ -3,15 +3,12 @@
 
 <head>
   <meta name="Description" content="Ark Fanpage">
-  <meta name="viewport" content="width=device-width,initia-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/skript.js" async></script>
   <link rel="icon" href="img/icon2.png">
   <title>Ark Enzyklopädie</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
